tests/errors/syn_err05.kt
// function declaration error
fun main {
    println("Error")
}